DOC: include Jupyter notebooks on website

--- a/docs/analyticity-1channel.ipynb
+++ b/docs/analyticity-1channel.ipynb
@@ -22,11 +22,11 @@
     ":::{card} Visualization of the Riemann sheets for the single-channel $T$&nbsp;matrix with one resonance pole\n",
     "TR-026\n",
     "^^^\n",
-    "_This report originates from **[TR-026](https://compwa.github.io/report/026)** by [Lena Pöpping](https://github.com/Zeyna777) on [compwa.github.io](https://compwa.github.io)._\n",
+    "_This notebook originates from **[TR&#8209;026](https://compwa.github.io/report/026)** on [compwa.github.io](https://compwa.github.io)._\n",
     "\n",
     "This report investigates and reproduces the Riemann sheets shown in [Fig. 50.1](https://pdg.lbl.gov/2023/reviews/rpp2023-rev-resonances.pdf#page=2) and [50.2](https://pdg.lbl.gov/2023/reviews/rpp2023-rev-resonances.pdf#page=4) of the PDG. The lineshape parametrization is directly derived with the $K$-matrix formalism. The transition from the first physical sheet to the second unphysical sheet is derived using analytic continuation.\n",
     "+++\n",
-    "🚧&nbsp;[ComPWA/compwa.github.com#261](https://github.com/ComPWA/compwa.github.io/issues/261)\n",
+    "✅&nbsp;[compwa.github.com#261](https://github.com/ComPWA/compwa.github.io/issues/261)\n",
     ":::\n",
     "::::"
    ]
