--- a/docs/analyticity-2channel.ipynb
+++ b/docs/analyticity-2channel.ipynb
@@ -22,11 +22,11 @@
     ":::{card}  Visualization of the Riemann sheets for the two-channel $T$-matrix with one pole\n",
     "TR-027\n",
     "^^^\n",
-    "_This report originates from **[TR-027](https://compwa.github.io/report/027)** by [Lena Pöpping](https://github.com/Zeyna777) on [compwa.github.io](https://compwa.github.io)._\n",
+    "_This notebook originates from **[TR&#8209;027](https://compwa.github.io/report/027)** on [compwa.github.io](https://compwa.github.io)._\n",
     "\n",
     "Following **[TR-026](https://compwa.github.io/report/026)**, the Riemann sheets for the amplitude calculated within the $K$-matrix formalism for the two-channel case are visualized. The method of transitioning from the first physical sheet to the unphysical sheets is extended to the two dimensional case using [Eur. Phys. J. C (2023) 83:850](https://juser.fz-juelich.de/record/1017534/files/s10052-023-11953-6.pdf) in order to visualize the third and the fourth unphysical sheet.\n",
     "+++\n",
-    "🚧&nbsp;[ComPWA/compwa.github.com#261](https://github.com/ComPWA/compwa.github.io/issues/261)\n",
+    "✅&nbsp;[compwa.github.com#261](https://github.com/ComPWA/compwa.github.io/issues/261)\n",
     ":::\n",
     "::::"
    ]
