Import fixes from compwa.github.io
https://github.com/ComPWA/compwa.github.io/pull/264

--- a/docs/analyticity-2channel.ipynb
+++ b/docs/analyticity-2channel.ipynb
@@ -48,12 +48,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
     },
-    "slideshow": {
-     "slide_type": ""
+    "mystnb": {
+     "code_prompt_show": "Import Python libraries"
     },
     "tags": [
      "hide-cell"
@@ -61,8 +62,10 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "from __future__ import annotations\n",
     "\n",
+    "import os\n",
     "import warnings\n",
     "from typing import Any\n",
     "\n",
@@ -71,6 +74,7 @@
     "import plotly.graph_objects as go\n",
     "import sympy as sp\n",
     "from ampform.io import aslatex\n",
+    "from ampform.kinematics.phasespace import Kallen\n",
     "from ampform.sympy import unevaluated\n",
     "from IPython.display import Math, display\n",
     "from ipywidgets import widgets as w\n",
@@ -81,12 +85,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# @title\n",
+    "if \"COLAB_RELEASE_TAG\" in os.environ:\n",
+    "    import subprocess\n",
+    "\n",
+    "    from google.colab import output\n",
+    "\n",
+    "    output.enable_custom_widget_manager()\n",
+    "    subprocess.run(\"pip install -q ipympl\".split(), check=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
     "tags": []
    },
    "source": [
@@ -97,6 +123,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -110,6 +137,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "@unevaluated(real=False)\n",
     "class PhaseSpaceFactor(sp.Expr):\n",
     "    s: Any\n",
@@ -131,6 +159,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -144,9 +173,7 @@
    },
    "outputs": [],
    "source": [
-    "from ampform.kinematics.phasespace import Kallen\n",
-    "\n",
-    "\n",
+    "# @title\n",
     "@unevaluated(real=False)\n",
     "class PhaseSpaceFactorKallen(sp.Expr):\n",
     "    s: Any\n",
@@ -248,6 +275,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -261,6 +289,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "class DiagonalMatrix(sp.DiagonalMatrix):\n",
     "    def _latex(self, printer, *args):\n",
     "        return printer._print(self.args[0])\n",
@@ -322,6 +351,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -338,6 +368,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "s = sp.Symbol(\"s\")\n",
     "ma1 = sp.Symbol(\"m_{a1}\")\n",
     "mb1 = sp.Symbol(\"m_{b1}\")\n",
@@ -354,6 +385,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -367,6 +399,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "k_expr_00 = (g1 * g1 * m0) / (s - m0**2)\n",
     "k_expr_10 = (g1 * g2 * m0) / (s - m0**2)\n",
     "k_expr_11 = (g2 * g2 * m0) / (s - m0**2)\n",
@@ -440,6 +473,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -453,6 +487,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "rho = DiagonalMatrix(sp.MatrixSymbol(\"rho\", n, n))\n",
     "Math(aslatex({rho: rho.as_explicit()}))"
    ]
@@ -555,9 +590,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
+    "# @title\n",
     "T_II_rho_expr = T_II_explicit.xreplace(rho_expressions_II)\n",
     "T_III_rho_expr = T_III_explicit.xreplace(rho_expressions_III)\n",
     "T_IV_rho_expr = T_IV_explicit.xreplace(rho_expressions_IV)"
@@ -613,6 +651,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -628,6 +667,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "%config InlineBackend.figure_formats = [\"svg\"]\n",
     "\n",
     "T_I_func = sp.lambdify(symbols, T_I_cm_expr[0, 0].doit())\n",
@@ -682,9 +722,7 @@
     "T4p_res2 = T_IV_func(Zp**2, *args2)\n",
     "\n",
     "fig, axes = plt.subplots(figsize=(11, 6), ncols=4, sharey=True)\n",
-    "ax1, ax2, ax3, ax4 = axes\n",
-    "for ax in axes:\n",
-    "    ax.set_xlabel(R\"$\\mathrm{Re}\\,\\sqrt{s}$\")\n",
+    "ax1, ax2, ax3, ax4 = axes.flatten()\n",
     "\n",
     "ax1.plot(x, T1n_res1[0].imag, label=R\"$T_\\mathrm{I}(s-0i)$\")\n",
     "ax1.plot(x, T1p_res1[0].imag, label=R\"$T_\\mathrm{I}(s+0i)$\")\n",
@@ -705,7 +743,9 @@
     "\n",
     "for ax in axes:\n",
     "    ax.legend()\n",
+    "    ax.set_xlabel(R\"$\\mathrm{Re}\\,\\sqrt{s}$\")\n",
     "    ax.set_ylim(-1, +1)\n",
+    "ax1.set_ylabel(R\"$\\mathrm{Im}\\,T(s)$ (a.u.)\")\n",
     "\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -742,6 +782,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -757,6 +798,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "%config InlineBackend.figure_formats = [\"png\"]\n",
     "\n",
     "fig, axes = plt.subplots(figsize=(12, 8), ncols=2, nrows=2, sharey=True)\n",
@@ -789,9 +831,9 @@
     "linestyle = dict(ls=\"dotted\", lw=1)\n",
     "for ax in axes.flatten():\n",
     "    ax.axhline(0, c=\"black\", **linestyle)\n",
-    "    ax.axvline(s_thr1, c=\"C0\", **linestyle, label=R\"$\\sqrt{s_\\text{thr1}}$\")\n",
-    "    ax.axvline(s_thr2, c=\"C1\", **linestyle, label=R\"$\\sqrt{s_\\text{thr2}}$\")\n",
-    "linestyle = dict(c=\"r\", ls=\"dotted\", label=R\"$m_\\text{res}$\")\n",
+    "    ax.axvline(s_thr1, c=\"C0\", **linestyle, label=R\"$\\sqrt{s_\\mathrm{thr1}}$\")\n",
+    "    ax.axvline(s_thr2, c=\"C1\", **linestyle, label=R\"$\\sqrt{s_\\mathrm{thr2}}$\")\n",
+    "linestyle = dict(c=\"r\", ls=\"dotted\", label=R\"$m_\\mathrm{res}$\")\n",
     "for ax in axes[0]:\n",
     "    ax.axvline(parameter_defaults1[m0], **linestyle)\n",
     "for ax in axes[1]:\n",
@@ -828,6 +870,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -845,6 +888,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "def sty(sheet_name: str) -> dict:\n",
     "    sheet_color = sheet_colors[sheet_name]\n",
     "    n_lines = 16\n",
@@ -888,6 +932,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -903,6 +948,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "Sp_I_res1 = go.Surface(x=X, y=+Y, z=T1p_res1.imag, **sty(\"T1 (physical)\"))\n",
     "Sn_II_res1 = go.Surface(x=X, y=-Y, z=T2n_res1.imag, **sty(\"T2 (unphysical)\"))\n",
     "Sn_III_res1 = go.Surface(x=X, y=-Y, z=T3n_res1.imag, **sty(\"T3 (unphysical)\"))\n",
@@ -1021,6 +1067,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -1029,13 +1089,14 @@
      "slide_type": ""
     },
     "tags": [
+     "full-width",
      "hide-input",
      "scroll-input"
     ]
    },
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
+    "# @title\n",
     "sliders = dict(\n",
     "    g01=w.FloatSlider(\n",
     "        description=R\"$g^{0}_1$\",\n",
@@ -1056,7 +1117,7 @@
     "        max=+6,\n",
     "    ),\n",
     "    T_max=w.FloatSlider(\n",
-    "        description=R\"$T_\\text{max}$\",\n",
+    "        description=R\"$T_\\mathrm{max}$\",\n",
     "        value=1.0,\n",
     "        min=0.1,\n",
     "        max=6.0,\n",
@@ -1077,8 +1138,8 @@
     "fig.canvas.footer_visible = False\n",
     "ax1d1, ax1d2, ax2d1, ax2d2 = axes.flatten()\n",
     "\n",
-    "for ax in axes.flatten():\n",
-    "    ax.set_xlabel(R\"$\\mathrm{Re}\\,s$\")\n",
+    "for ax in axes[1]:\n",
+    "    ax.set_xlabel(R\"$\\mathrm{Re}\\,\\sqrt{s}$\")\n",
     "ax1d1.set_ylabel(\"Intensity (a.u.)\")\n",
     "ax2d1.set_ylabel(R\"$\\mathrm{Im}\\,s$\")\n",
     "\n",
@@ -1109,12 +1170,20 @@
     "        LINES = [\n",
     "            ax1d1.axvline(m0, c=R_color, ls=\"dashed\"),\n",
     "            ax1d2.axvline(m0, c=R_color, ls=\"dashed\"),\n",
-    "            ax2d1.axvline(m0, c=R_color, ls=\"dashed\", label=R\"$m_\\text{res}$\"),\n",
-    "            ax2d2.axvline(m0, c=R_color, ls=\"dashed\", label=R\"$m_\\text{res}$\"),\n",
-    "            ax1d1.plot(x, T1y, c=T1_color, label=R\"$T_\\text{I}$\")[0],\n",
-    "            ax1d1.plot(x, T2y, c=T2_color, label=R\"$T_\\text{II}$\", ls=\"dotted\")[0],\n",
-    "            ax1d2.plot(x, T1y, c=T1_color, label=R\"$T_\\text{I}$\")[0],\n",
-    "            ax1d2.plot(x, T3y, c=T3_color, label=R\"$T_\\text{III}$\", ls=\"dotted\")[0],\n",
+    "            ax2d1.axvline(m0, c=R_color, ls=\"dashed\", label=R\"$m_\\mathrm{res}$\"),\n",
+    "            ax2d2.axvline(m0, c=R_color, ls=\"dashed\", label=R\"$m_\\mathrm{res}$\"),\n",
+    "            ax1d1.plot(x, T1y, c=T1_color, label=R\"$\\left|T_\\mathrm{I}\\right|^2$\")[0],\n",
+    "            ax1d1.plot(\n",
+    "                x, T2y, c=T2_color, label=R\"$\\left|T_\\mathrm{II}\\right|^2$\", ls=\"dotted\"\n",
+    "            )[0],\n",
+    "            ax1d2.plot(x, T1y, c=T1_color, label=R\"$\\left|T_\\mathrm{I}\\right|^2$\")[0],\n",
+    "            ax1d2.plot(\n",
+    "                x,\n",
+    "                T3y,\n",
+    "                c=T3_color,\n",
+    "                label=R\"$\\left|T_\\mathrm{III}\\right|^2$\",\n",
+    "                ls=\"dotted\",\n",
+    "            )[0],\n",
     "        ]\n",
     "        MESH = [\n",
     "            ax2d1.pcolormesh(X, Y, T1p_res1.imag, **style),\n",
@@ -1150,12 +1219,12 @@
     "    ax.axvline(s_thr1, c=\"C0\", ls=\"dotted\", lw=1)\n",
     "    ax.axvline(s_thr2, c=\"C1\", ls=\"dotted\", lw=1)\n",
     "for ax in axes[1]:\n",
-    "    ax.axvline(s_thr1, c=\"C0\", label=R\"$\\sqrt{s_\\text{thr1}}$\", ls=\"dotted\", lw=1)\n",
-    "    ax.axvline(s_thr2, c=\"C1\", label=R\"$\\sqrt{s_\\text{thr2}}$\", ls=\"dotted\", lw=1)\n",
-    "ax2d1.text(0.5, +0.7, R\"$T_\\text{I}$\", color=T1_color, size=20)\n",
-    "ax2d1.text(0.5, -0.75, R\"$T_\\text{II}$\", color=T2_color, size=20)\n",
-    "ax2d2.text(0.5, +0.7, R\"$T_\\text{I}$\", color=T1_color, size=20)\n",
-    "ax2d2.text(0.5, -0.75, R\"$T_\\text{III}$\", color=T3_color, size=20)\n",
+    "    ax.axvline(s_thr1, c=\"C0\", label=R\"$\\sqrt{s_\\mathrm{thr1}}$\", ls=\"dotted\", lw=1)\n",
+    "    ax.axvline(s_thr2, c=\"C1\", label=R\"$\\sqrt{s_\\mathrm{thr2}}$\", ls=\"dotted\", lw=1)\n",
+    "ax2d1.text(0.5, +0.7, R\"$T_\\mathrm{I}$\", color=T1_color, size=20)\n",
+    "ax2d1.text(0.5, -0.75, R\"$T_\\mathrm{II}$\", color=T2_color, size=20)\n",
+    "ax2d2.text(0.5, +0.7, R\"$T_\\mathrm{I}$\", color=T1_color, size=20)\n",
+    "ax2d2.text(0.5, -0.75, R\"$T_\\mathrm{III}$\", color=T3_color, size=20)\n",
     "\n",
     "output = w.interactive_output(plot, controls=sliders)\n",
     "UI = w.VBox(list(sliders.values()))\n",
