--- a/docs/analyticity-1channel.ipynb
+++ b/docs/analyticity-1channel.ipynb
@@ -61,6 +61,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -77,6 +78,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "from __future__ import annotations\n",
     "\n",
     "import warnings\n",
@@ -110,6 +112,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -124,6 +127,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "from ampform.kinematics.phasespace import Kallen\n",
     "\n",
     "\n",
@@ -220,6 +224,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "slideshow": {
      "slide_type": ""
@@ -228,6 +233,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "n = 1\n",
     "I = sp.Identity(n)\n",
     "K = sp.MatrixSymbol(\"K\", n, n)\n",
@@ -270,6 +276,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "slideshow": {
      "slide_type": ""
@@ -280,6 +287,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "g0, m0 = sp.symbols(R\"g^{0} m0\")\n",
     "k_expr = (g0**2) / (s - m0**2)\n",
     "definitions_I = {\n",
@@ -317,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculation of the second Riemann sheet \n",
+    "### Calculation of the second Riemann sheet\n",
     "Since the $T$ function is real below the branch cut it can be shown that the discontinuity above and below the threshold reads as:"
    ]
   },
@@ -383,35 +391,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T2_explicit = T2.as_explicit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "definitions_II = {\n",
     "    **definitions_I,\n",
     "    rho[0, 0]: PhaseSpaceFactor(s, m1, m2),\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
+    "}\n",
+    "T2_explicit = T2.as_explicit()\n",
     "T2_expr = T2_explicit[0, 0].xreplace(definitions_II)"
    ]
   },
@@ -440,7 +424,7 @@
     "tags": []
    },
    "source": [
-    "## Visualization of the 2 dimensional lineshape "
+    "## Visualization of the 2 dimensional lineshape"
    ]
   },
   {
@@ -469,6 +453,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "mystnb": {
      "code_prompt_show": "Define meshgrid and parameter values"
@@ -482,6 +467,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "epsilon = 1e-5\n",
     "x = np.linspace(0, 6, num=200)\n",
     "y = np.linspace(epsilon, 1, num=100)\n",
@@ -508,6 +494,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -522,14 +509,15 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "%config InlineBackend.figure_formats = [\"svg\"]\n",
     "\n",
     "plt.rcParams.update({\"font.size\": 16})\n",
     "fig, axes = plt.subplots(figsize=(15, 6), ncols=2, sharey=True)\n",
     "ax1, ax2 = axes\n",
     "for ax in axes:\n",
-    "    ax.set_xlabel(R\"$\\mathrm{Re}(s)$\")\n",
-    "    ax.set_ylabel(R\"$\\mathrm{Im}(T)$\")\n",
+    "    ax.set_xlabel(R\"$\\mathrm{Re}\\,\\sqrt{s}$\")\n",
+    "ax1.set_ylabel(R\"$\\mathrm{Im}\\,T$\")\n",
     "\n",
     "ax1.plot(x, T1n[0].imag, label=R\"$T_\\mathrm{I}(s-0i)$\")\n",
     "ax1.plot(x, T1p[0].imag, label=R\"$T_\\mathrm{I}(s+0i)$\")\n",
@@ -557,7 +545,7 @@
     "tags": []
    },
    "source": [
-    "The Amplitude for the second sheet is only defined for $s$ positive real part and negative complex part. It inherits the analytic structure of the phasespace factor $\\rho$ (the branch cut starting form zero and from $s=s_{thr}$ on the real axis). So it is only defined up to the closest branch cut which is in this case the cut at $s=s_{thr}$. "
+    "The Amplitude for the second sheet is only defined for $s$ positive real part and negative complex part. It inherits the analytic structure of the phasespace factor $\\rho$ (the branch cut starting form zero and from $s=s_{thr}$ on the real axis). So it is only defined up to the closest branch cut which is in this case the cut at $s=s_{thr}$."
    ]
   },
   {
@@ -571,6 +559,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jupyter": {
      "source_hidden": true
@@ -585,6 +574,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "def sty(sheet_name: str) -> dict:\n",
     "    sheet_color = sheet_colors[sheet_name]\n",
     "    n_lines = 12\n",
@@ -628,6 +618,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cellView": "form",
     "editable": true,
     "jp-MarkdownHeadingCollapsed": true,
     "jupyter": {
@@ -644,6 +635,7 @@
    },
    "outputs": [],
    "source": [
+    "# @title\n",
     "Sp = go.Surface(x=X, y=Y, z=-T1p.imag, **sty(\"Physical (T1)\"))\n",
     "Sn = go.Surface(x=X, y=-Y, z=-T2n.imag, **sty(\"Unphysical (T2)\"))\n",
     "Sp.name = \"Physical sheet I\"\n",
@@ -686,9 +678,9 @@
     ")\n",
     "fig.update_scenes(\n",
     "    camera_center=dict(z=-0.2),\n",
-    "    xaxis_title_text=\"Re s\",\n",
-    "    yaxis_title_text=\"Im s\",\n",
-    "    zaxis_title_text=\"Im T\",\n",
+    "    xaxis_title_text=\"Re √s\",\n",
+    "    yaxis_title_text=\"Im √s\",\n",
+    "    zaxis_title_text=\"Im T(s)\",\n",
     "    zaxis_range=[-vmax, +vmax],\n",
     ")\n",
     "\n",
