FIX: install dependencies on Google Colab

--- a/docs/analyticity-2channel.ipynb
+++ b/docs/analyticity-2channel.ipynb
@@ -53,6 +53,28 @@
     "jupyter": {
      "source_hidden": true
     },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# @title\n",
+    "import os\n",
+    "if \"COLAB_RELEASE_TAG\" in os.environ:\n",
+    "    import subprocess\n",
+    "    subprocess.run(\"pip install -q ampform ipympl ipywidgets plotly\".split(), check=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "mystnb": {
      "code_prompt_show": "Import Python libraries"
     },
@@ -101,12 +123,8 @@
    "source": [
     "# @title\n",
     "if \"COLAB_RELEASE_TAG\" in os.environ:\n",
-    "    import subprocess\n",
-    "\n",
     "    from google.colab import output\n",
-    "\n",
-    "    output.enable_custom_widget_manager()\n",
-    "    subprocess.run(\"pip install -q ipympl\".split(), check=False)"
+    "    output.enable_custom_widget_manager()"
    ]
   },
   {
