--- a/docs/analyticity-1channel.ipynb
+++ b/docs/analyticity-1channel.ipynb
@@ -66,6 +66,28 @@
     "jupyter": {
      "source_hidden": true
     },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# @title\n",
+    "import os\n",
+    "if \"COLAB_RELEASE_TAG\" in os.environ:\n",
+    "    import subprocess\n",
+    "    subprocess.run(\"pip install -q ampform ipympl plotly\".split(), check=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "mystnb": {
      "code_prompt_show": "Import Python libraries"
     },
